--- a/config.toml
+++ b/config.toml
@@ -1,21 +1,20 @@
-baseurl = "https://example.org/"
-title = "Creative portfolio"
+baseurl = "https://variably-explanatory.netlify.com/"
+title = "Variably Explanatory"
 theme = "hugo-creative-portfolio-theme"
 languageCode = "en-us"
 # Enable comments by entering your Disqus shortname
-disqusShortname = ""
+disqusShortname = "@clarissapaik"
 # Enable Google Analytics by entering your tracking code
 googleAnalytics = ""
 
 [params]
   # Style options: default (pink), blue, green, pink, red, sea, violet
   # Use custom.css for your custom styling
-  style = "default"
+  style = "sea"
   description = "Describe your website"
-  copyright = "&copy;2016 Your name or company"
+  copyright = "&copy;2018 Clarissa Paik"
   sidebarAbout = [
-    "I am a creative illustrator and graphic designer with more than 10 years of experience.",
-    "Originally from Toronto, currently based in London."
+    "Greetings! Clarissa here. I'm glad you're here to join me in my sporadic attempts to 'splain things that intrigue, frustrate, and challenge me.",
   ]
   # Contact page
      # Since this template is static, the contact form uses www.formspree.io as a
@@ -45,11 +44,11 @@ googleAnalytics = ""
   url = "contact/"
 
   [params.social]
-  facebook      = "full page or profile url in facebook"
-  googleplus    = "full profile url in googleplus"
-  email         = "email@example.com"
-  twitter       = "full profile url in twitter"
-  linkedin      = "full profile url in linkedin"
-  stackoverflow = "full profile url in stackoverflow"
-  instagram     = "full profile url in instagram"
-  github        = "full profile url in github"
+  #facebook      = "full page or profile url in facebook"
+  #googleplus    = "full profile url in googleplus"
+  email         = "cpaik001@ucr.edu"
+  twitter       = "https://twitter.com/clarissapaik"
+  linkedin      = "https://www.linkedin.com/in/clarissa-paik-949491b6/"
+  #stackoverflow = "full profile url in stackoverflow"
+  #instagram     = "full profile url in instagram"
+  github        = "https://github.com/clarissapaik"
